# www.family-tree

./: .gitignore  .prettierrc.js  Cargo.toml  README.md  ember-cli-build.js  genea.doc  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  rust.yml
app/: app.js  index.html  router.js
app/components/: await-each.gjs  await.gjs  current-reference-person.hbs  current-reference-person.js  index-link.gjs  index-link.hbs  index.gjs  maintainer-link.gjs  maintainer-link.hbs  maintainer-link.js  make-reference-person.gjs  make-reference-person.hbs  make-reference-person.js  person-link.gjs  person-link.hbs  person-link.js  person-outline-children.gjs  person-outline-children.hbs  person-outline-children.js  person-outline.gjs  person-outline.hbs  person-outline.js  person.gjs
app/controllers/: index.js  person.js
app/models/: partnership.js  person.js  root.js
app/routes/: index.js  people.js  person.js
app/services/: genea.js  reference-person.js  request-manager.js
app/templates/: application.hbs  index.hbs  people.hbs  person.hbs
config/: environment.js
src/: genea.rs  html.rs  json.rs  json_api.rs  lib.rs  main.rs  outline.rs
src/genea/: error.rs  parser.rs
tests/: index.html  test-helper.js
tests/integration/components/: current-reference-person-test.js  index-link-test.js  maintainer-link-test.js  make-reference-person-test.js  person-link-test.js  person-outline-children-test.js  person-outline-test.js
tests/unit/controllers/: index-test.js  person-test.js
tests/unit/models/: partnership-test.js  person-test.js  (+1 more)
(+4 files in other folders)
