[package]
name = "family-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.4"
anyhow = "1.0.86"
erased-serde = "0.4.5"
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
structopt = "0.3.26"
thiserror = "1.0.63"
